# ASRO_DIO

./: README.md  ok.sh  ok_eth3d.sh  ok_kaile_of.sh  ok_lab.sh  ok_lab_of.sh  readme.txt
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: cv_bridge.pc  rogio_threads.pc  stream_shower.pc
devel/lib/python3/dist-packages/cv_bridge/: __init__.py
devel/lib/stream_shower/: ROFusion_vis
devel/share/cv_bridge/cmake/: cv_bridge-extras.cmake  cv_bridgeConfig.cmake
devel/share/rogio_threads/cmake/: rogio_threads-msg-paths.cmake  rogio_threadsConfig.cmake
devel/share/roseus/ros/rogio_threads/: manifest.l
devel/share/roseus/ros/stream_shower/: manifest.l
devel/share/stream_shower/cmake/: stream_shower-msg-extras.cmake  stream_shower-msg-paths.cmake  stream_showerConfig.cmake
result/: kinect_dk.txt  kinect_dk_points.ply
src/ROGIO-ROS-threads/: CMakeLists.txt
src/ROGIO-ROS-threads/camera_config/: ICL_NUIM.yaml  TUM1.yaml  TUM3.yaml  bf_apt0.yaml  bf_office3.yaml  kinect_dk.yaml  kinect_dk_640.yaml  kinect_dk_NFOV.yaml  syn_camera.yaml
src/ROGIO-ROS-threads/config/: Astra2_config.yaml  Kinect_config.yaml  Kinect_config_MR.yaml  Kinect_kaile_config.yaml  Kinect_lab_config.yaml  L515_config.yaml  raw_vis.rviz
src/ROGIO-ROS-threads/config/eth3d/: eth3d_config.yaml  eth3d_depth_config.yaml  eth3d_volume.yaml
src/ROGIO-ROS-threads/config_files/: camera_shake_3.yaml  controller.yaml
src/ROGIO-ROS-threads/dataset_config/: apt0.yaml  apt1.yaml  company_0.yaml  fr1_rpy.yaml  fr1_xyz.yaml  fr3_office.yaml  kinect_lab_10_7.yaml  kinect_lab_9_30.yaml  office3.yaml  re_aprt1.yaml  room_kt2.yaml  room_kt3.yaml  room_noise_kt0.yaml  room_noise_kt1.yaml  room_noise_kt2.yaml  room_noise_kt3.yaml
src/ROGIO-ROS-threads/dataset_config/replica_dataset/apartment1/: apartment1_10_noise.yaml  apartment1_10_raw.yaml  apartment1_5_noise.yaml  apartment1_5_raw.yaml
src/ROGIO-ROS-threads/include/: data_types.h  rosefusion.h
src/ROGIO-ROS-threads/launch/: Astra2.launch  eth3d.launch  kinect.launch  kinect_kaile.launch  kinect_lab.launch  kinect_lab2.launch  l515.launch
src/ROGIO-ROS-threads/src/: gravity_estimation.cpp  main.cpp  pose_estimation.cpp  pose_estimation.cpp.backup  rosefusion.cpp  surface_measurement.cpp
src/ROGIO-ROS-threads/src/cuda/: ITMMeshingEngine_CUDA.cu  ITMSceneReconstructionEngine_CUDA.cu  ITMSwappingEngine_CUDA.cu  gravity_estimation.cu  pose_estimation.cu  pose_estimation_base.cu.backup  pose_estimation_reduce.cu  surface_measurement.cu  surface_prediction.backup  surface_prediction.cu  surface_prediction_phong_shading.cu  surface_reconstruction.cu
src/ROGIO-ROS-threads/src/cuda/include/: ITMMeshingEngine_CUDA.h  ITMMeshingEngine_Shared.h  ITMSceneReconstructionEngineShared.h  ITMSceneReconstructionEngine_CUDA.h  ITMSwappingEngineShared.h  ITMSwappingEngine_CUDA.h
src/ROGIO-ROS-threads/src/cuda/include/voxel_hash/: ITMGlobalCache.h  ITMLocalVBA.h  ITMMesh.h  ITMRenderState_VH.h  ITMRepresentationAccess.h  ITMScene.h  ITMVoxelBlockHash.h  ITMVoxelTypes.h  utilitys.h
src/cv_bridge/: CMakeLists.txt
src/cv_bridge/src/: module.hpp
src/stream_shower/: CMakeLists.txt
src/stream_shower/src/: .calibration_stream.cpp.swp  calibration_stream.cpp  stream_vis.cpp
